--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-redux": "^6.0.0",
     "react-responsive-modal": "^3.6.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.5",
     "react-spinners": "^0.5.1",
     "react-table": "^6.8.6",
     "react-tooltip": "^3.9.2",
